2004-07-30  Anders Carlsson  <andersca@gnome.org>

	* configure.in:
	* data/mime/Makefile.am:
	* data/planner.desktop.in:
	Support new mime activation specification.
	
2004-07-30  Richard Hult  <richard@imendio.com>

	* examples/Makefile.am:
	* examples/kitchen.planner: Add nice example from Kurt.

2004-07-30  Richard Hult  <richard@imendio.com>

	* src/planner-window.c: (get_last_dir): Remove trailing slash.

2004-07-30  Richard Hult  <richard@imendio.com>

	* configure.in:
	* data/ui/Makefile.am:
	* src/Makefile.am: Don't make resource usage view optional.

2004-07-30  Richard Hult  <richard@imendio.com>

	* configure.in: Update requirements.

	* libegg/recent-files: Sync with latest libegg.

	* libplanner/mrp-file-module.c: (mrp_file_module_load_all):
	* src/planner-plugin-loader.c: (mpl_load_dir):
	* src/planner-view-loader.c: (mvl_load_dir): Don't hardcode .so
	suffix.

	* src/Makefile.am: Split out shared code from task/gantt views.

2004-07-27  Richard Hult  <richard@imendio.com>

	* src/planner-task-dialog.c:
	(task_dialog_resource_units_cell_edited): Merge from 0.12 branch.

2004-07-19  Richard Hult  <richard@imendio.com>

	* configure.in: Bump.

2004-07-08  Anders Carlsson  <andersca@gnome.org>

	* src/planner-window.c: (window_open_cb), (window_do_save_as):
	We don't need to check if we're opening a directory.

2004-07-08  Anders Carlsson  <andersca@gnome.org>

	* configure.in:
	* data/glade/html-output.glade:
	* src/planner-window.c: (window_open_cb), (window_do_save_as):
	Use GtkFileChooser.
	
2004-07-08  Richard Hult  <richard@imendio.com>

	* Release 0.12.

	* configure.in: Bump version.
	* examples/sample-1.planner: Fix the sample name.
	* src/planner-window.c: (window_update_title): Brand a bit.

2004-07-07  Richard Hult  <richard@imendio.com>

	* planner.spec.in: Put the sql storage in the right
	package. Redirect mime updating to /dev/null.

	* docs/user-guide/C/planner.xml: Fix up.

	* src/planner-window.c: Brand a bit.
	