@@ -1,14 +1,5 @@
 uidir = $(datadir)/planner/ui
 
-python_script_ui_files = \
-	python-plugin.ui
-
-if HAVE_PYTHON_PLUGIN
-python_script_ui = $(python_script_ui_files)
-else
-python_script_ui =
-endif
-
 ui_DATA = \
 	gantt-view.ui		\
 	task-view.ui		\
@@ -19,8 +10,7 @@ ui_DATA = \
 	sql-plugin.ui		\
 	task-view.ui		\
 	xml-planner-plugin.ui	\
-	time-table-view.ui	\
-	$(python_script_ui)
+	time-table-view.ui
 
 
-EXTRA_DIST = $(ui_DATA) $(python_script_ui_files)
+EXTRA_DIST = $(ui_DATA)
