@@ -1,13 +1,0 @@
-<Root>
-  <commands>	
-    <cmd name="Python script" _label="Execute a Python script" pixtype="stock" pixname="Execute"/>
-  </commands>
-  <menu>
-    <submenu    name="Actions">
-      <placeholder name="View specific actions placeholder">
-        <menuitem name="Python script" verb="" accel=""/>
-        <separator/>
-      </placeholder>
-    </submenu>
-  </menu>
-</Root>
