@@ -1,3 +1,10 @@
+2004-07-30  Xavier Ordoquy  <xordoquy@linovia.com>
+
+	* data/ui/Makefile.am:
+	* data/ui/python-plugin.ui:
+	* src/planner-python-plugin.c:
+	The plugin now reads files in ~/.gnomeXX/planner/python
+
 2004-07-30  Anders Carlsson  <andersca@gnome.org>
 
 	* configure.in:
